actualizar importacion de imagen del home

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="/images/home-picture.jpg" alt="home-picture">
+                <img src="images/home-picture.jpg" alt="home-picture">
             </div>
             <h1>DIEGO GUZMAN</h1>
             <h2>Estudiante de ingeniería de sistemas e informática - Practicante de programación</h2>
