--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <nav id="nav">
                 <ul>
                     <li><a href="#inicio">INICIO</a></li>
-                    <li><a href="#sobremi">Sobre mi</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#sobremi">SOBRE MI</a></li>
+                    <li><a href="#skills">SKILLS</a></li>
+                    <li><a href="#contacto">CONTACTO</a></li>
                 </ul>
             </nav>
         </header>
